--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
+    <color name="tcccccc">#cccccc</color>
+    <color name="t0b0b0b">#0b0b0b</color>
+    <color name="t999999">#999999</color>
 </resources>
