--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="dim10">10dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+    <dimen name="dim20">20dp</dimen>
+    <dimen name="dim15">15dp</dimen>
+    <dimen name="dim5">5dp</dimen>
 </resources>
