--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -12,15 +12,17 @@
     tools:context="cn.people.weever.activity.login.LoginActivity">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:background="@color/primary_light"
+        android:orientation="vertical"
+        android:padding="@dimen/dim48">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dim48"
             android:gravity="center"
-            android:text="用户名："/>
+            android:text="用户名：" />
 
         <EditText
             android:id="@+id/edtUserName"
@@ -30,15 +32,14 @@
             android:ems="10"
             android:hint="请输入用户名"
             android:inputType="textPersonName"
-            android:maxLength="20"
-            />
+            android:maxLength="20" />
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dim48"
             android:gravity="center"
-            android:text="密码："/>
+            android:text="密码：" />
 
         <EditText
             android:id="@+id/edtPassword"
@@ -48,25 +49,26 @@
             android:ems="10"
             android:hint="请输入密码"
             android:inputType="textPassword"
-            android:maxLength="20"/>
+            android:maxLength="20" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dim48"
             android:gravity="center"
-            android:text="车辆编号："
-            />
+            android:text="车辆编号：" />
 
         <Spinner
             android:id="@+id/spnCarNum"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dim48"/>
+            android:layout_height="@dimen/dim48" />
 
     </LinearLayout>
+
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dim48"
+        android:layout_margin="@dimen/dim48"
         android:text="登录"
         />
 </LinearLayout>
