--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -11,57 +11,68 @@
     android:orientation="vertical"
     tools:context="cn.people.weever.activity.login.LoginActivity">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_login"
+        android:layout_margin="@dimen/dim10"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/primary_light"
         android:orientation="vertical"
-        android:padding="@dimen/dim48">
+        android:padding="@dimen/dim10">
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/dim48"
+            android:layout_height="@dimen/dim36"
             android:gravity="center"
             android:text="用户名：" />
 
         <EditText
             android:id="@+id/edtUserName"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/dim48"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dim36"
             android:background="@drawable/shape_rec_normal"
             android:ems="10"
             android:hint="请输入用户名"
+            android:textSize="@dimen/txt12"
             android:inputType="textPersonName"
             android:maxLength="20" />
 
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/dim48"
+            android:layout_height="@dimen/dim36"
             android:gravity="center"
             android:text="密码：" />
 
         <EditText
             android:id="@+id/edtPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/dim48"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dim36"
             android:background="@drawable/shape_rec_normal"
             android:ems="10"
             android:hint="请输入密码"
+            android:textSize="@dimen/txt12"
             android:inputType="textPassword"
             android:maxLength="20" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/dim48"
+            android:layout_height="@dimen/dim36"
             android:gravity="center"
             android:text="车辆编号：" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/shape_rec_normal">
         <Spinner
             android:id="@+id/spnCarNum"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dim48"
-            android:background="@color/icons"/>
+            android:layout_height="@dimen/dim36" />
+        </LinearLayout>
 
     </LinearLayout>
 
