--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -64,7 +64,7 @@
             android:gravity="center"
             android:text="车辆编号："/>
 
-        <LinearLayout android:layout_width="wrap_content"
+        <LinearLayout android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:background="#496454">
             <Spinner
