--- a/app/src/main/res/layout/activity_poisearch2.xml
+++ b/app/src/main/res/layout/activity_poisearch2.xml
@@ -4,23 +4,23 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
+
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="50dip"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_height="@dimen/dim36"
+        android:layout_margin="5dp"
         android:orientation="horizontal" >
 
         <EditText
             android:id="@+id/city"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:enabled="false"
             android:text="西安" />
 
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            
             android:layout_weight="1"
             android:paddingLeft="6dp" >
 
@@ -41,8 +41,10 @@
                 <AutoCompleteTextView
                     android:id="@+id/searchkey"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:textSize="@dimen/txt12"
+                    android:background="@drawable/shape_rec_normal"
                     android:hint="请输入搜索内容" />
             </LinearLayout>
 
