--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -66,12 +66,12 @@
 
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:background="#496454">
+                      android:background="@color/white">
             <Spinner
                 android:id="@+id/spnCarNum"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dim48"
-                android:background="@color/icons"/>
+                />
         </LinearLayout>
 
 
