--- a/app/src/main/res/layout/activity_poisearch2.xml
+++ b/app/src/main/res/layout/activity_poisearch2.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary">
+
+        <ImageView
+            android:id="@+id/img_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_action_arrow_left"/>
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="返回"
+            android:textColor="@color/white"
+            android:gravity="center"/>
+    </android.support.v7.widget.Toolbar>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -16,6 +36,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:enabled="false"
+            android:textSize="@dimen/txt12"
+            android:gravity="center"
             android:text="西安" />
 
         <RelativeLayout
