--- a/app/src/main/res/layout/activity_my_orders.xml
+++ b/app/src/main/res/layout/activity_my_orders.xml
@@ -24,7 +24,7 @@
         <include
             layout="@layout/inc_toolbar_title"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></include>
+            android:layout_height="wrap_content"></include>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
