--- a/app/src/main/res/layout/activity_poisearch2.xml
+++ b/app/src/main/res/layout/activity_poisearch2.xml
@@ -5,25 +5,10 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <include
+        layout="@layout/inc_toolbar_title"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary">
-
-        <ImageView
-            android:id="@+id/img_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_arrow_left"/>
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="返回"
-            android:textColor="@color/white"
-            android:gravity="center"/>
-    </android.support.v7.widget.Toolbar>
+        android:layout_height="wrap_content"></include>
 
     <LinearLayout
         android:layout_width="fill_parent"
